--- a/build.common.gradle
+++ b/build.common.gradle
@@ -50,7 +50,7 @@ android {
     defaultConfig {
         signingConfig signingConfigs.debug
         applicationId 'com.qualcomm.ftcrobotcontroller'
-        minSdkVersion 24
+        minSdk 24
         //noinspection ExpiredTargetSdkVersion
         targetSdkVersion 28
 
